fix too much height footer

--- a/front-end/src/components/Footer/Sun.css
+++ b/front-end/src/components/Footer/Sun.css
@@ -54,7 +54,7 @@
 
   .canvas {
 	width: full;
-	height: 600px;
+	height: 400px;
 	margin: 0 auto;
 	position: relative;
 	animation-delay: 1s;
